[project]
name = "sdxl-turbo-worker"
version = "0.1.0"
description = "SDXL-Turbo image generation worker for testing"
requires-python = ">=3.11"
dependencies = [
    "gen-worker>=0.2.1",
    "msgspec>=0.18.0",
    "diffusers>=0.32.0,<0.33.0",
    "transformers>=4.47.0,<4.48.0",
    "accelerate>=1.2.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
]

[tool.cozy]
deployment-id = "sdxl-turbo-test"
python = "3.11"
pytorch = "2.5"
cuda = "12.6"
main = "worker"
gen-worker = ">=0.2.1"

[tool.cozy.environment]
HF_HOME = "/app/.cache/huggingface"

[tool.cozy.functions]
generate = { requires_gpu = true }
generate_base64 = { requires_gpu = true }

