[project]
name = "sdxl-turbo-worker"
version = "0.1.0"
description = "SDXL-Turbo image generation worker"
requires-python = ">=3.11"
dependencies = [
    "gen-worker>=0.2.1",
    "diffusers",
    "transformers<5",
    "accelerate",
    "sentencepiece",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdxl_turbo_worker"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
